--- a/src/lib/Panel/Result/Result.module.css
+++ b/src/lib/Panel/Result/Result.module.css
@@ -16,6 +16,7 @@
   user-select: none;
   padding-block: 15px;
   padding-inline: var(--scp-gutter-space-inline);
+  transition: background-color 0.3s;
 }
 
 .resultContent.active {
