feat: add many useful expose

--- a/src/lib/Panel/Result/Result.module.css
+++ b/src/lib/Panel/Result/Result.module.css
@@ -31,7 +31,7 @@
 .resultSubtitle {
   color: #64748b;
   font-size: 13px;
-  font-weight: 300;
+  font-weight: thin;
   margin-block-start: 7px;
 }
 
